--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,9 @@
 !/log/.keep
 !/tmp/.keep
 
-# Ignore Byebug command history file.
+/node_modules
+/yarn-error.log
+
 .byebug_history
-
-database.yml
-cable.yml
-
-public/javascripts/*
-public/stylesheets/*
-
-node_modules
+/public/packs
+/node_modules
